--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- Hero Section -->
     <section class="hero-section">
       <div class="container container-narrow text-center">
-        <h1 class="hero-title">Las Mejores Pizzas de la Ciudad</h1>
+        <h1 class="hero-title">Pizzeria Deliciosa</h1>
         <p class="hero-subtitle">Ingredientes frescos y recetas tradicionales</p>
         <a href="#menu" class="btn-primary">Ver Menú</a>
       </div>
@@ -72,7 +72,7 @@
           <!-- Pizza 1 -->
           <div class="pizza-card">
             <div class="pizza-image">
-              <img src="margarita.jfif" alt="Pizza Margherita">
+              <img src="pizza-margarita.png" alt="Pizza Margherita">
             </div>
             <div class="pizza-content">
               <div class="pizza-header">
