--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <div class="contacto-form">
             <div class="form-container">
               <h3>Envíanos un mensaje</h3>
-              <form>
+              <form action="https://formsubmit.co/gabo.utn.db@gmail.com" method="POST">
                 <div class="form-group">
                   <label for="name">Nombre</label>
                   <input type="text" id="name" placeholder="Tu nombre">
