--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               </div>
               <p>La clásica pizza italiana con salsa de tomate, mozzarella fresca, albahaca y aceite de oliva.</p>
               <p>La clásica pizza italiana con salsa de tomate, mozzarella fresca, albahaca y aceite de oliva.</p>
-              <a href="https://wa.me/1234567890?text=Hola%20me%20comunico%20por%20el%20producto%20'Margherita'"
+              <a href="https://wa.me/1234567890?text=Hola, me quiero una pizza Margarita de Pizzeria Deliciosa"
                 target="_blank" class="btn-whatsapp">
                 Pedir por WhatsApp
               </a>
@@ -265,22 +265,24 @@
         <h2 class="section-title">Contacto</h2>
 
         <div class="contacto-grid">
+
           <div class="contacto-form">
             <div class="form-container">
               <h3>Envíanos un mensaje</h3>
               <form action="https://formsubmit.co/gabo.utn.db@gmail.com" method="POST">
-                <div class="form-group">
-                  <label for="name">Nombre</label>
-                  <input type="text" id="name" placeholder="Tu nombre">
-                </div>
-                <div class="form-group">
-                  <label for="email">Email</label>
-                  <input type="email" id="email" placeholder="Tu email">
-                </div>
-                <div class="form-group">
-                  <label for="message">Mensaje</label>
-                  <textarea id="message" rows="4" placeholder="¿En qué podemos ayudarte?"></textarea>
-                </div>
+                <!-- Desactiva captcha si no lo necesitas -->
+                <input type="hidden" name="_captcha" value="false">
+
+                <label for="name">Nombre</label>
+                <input type="text" id="name" name="name" placeholder="Tu nombre" required>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" placeholder="Tu email" required>
+
+                <label for="message">Mensaje</label>
+                <textarea id="message" name="message" rows="4" placeholder="¿En qué podemos ayudarte?"
+                  required></textarea>
+
                 <button type="submit" class="btn-submit">Enviar Mensaje</button>
               </form>
             </div>
@@ -290,27 +292,21 @@
             <div class="info-container">
               <h3>Información de Contacto</h3>
               <div class="info-item">
-                <div class="info-icon">
-                  <i class="fas fa-map-marker-alt"></i>
-                </div>
+                <div class="info-icon"><i class="fas fa-map-marker-alt"></i></div>
                 <div>
                   <h4>Dirección</h4>
                   <p>Hipólito Yrigoyen 2580, San Justo, Santa Fe</p>
                 </div>
               </div>
               <div class="info-item">
-                <div class="info-icon">
-                  <i class="fas fa-phone"></i>
-                </div>
+                <div class="info-icon"><i class="fas fa-phone"></i></div>
                 <div>
                   <h4>Teléfono</h4>
                   <p>2222222222</p>
                 </div>
               </div>
               <div class="info-item">
-                <div class="info-icon">
-                  <i class="fas fa-clock"></i>
-                </div>
+                <div class="info-icon"><i class="fas fa-clock"></i></div>
                 <div>
                   <h4>Horario de Atención</h4>
                   <p>Lunes a Jueves: 11:00 - 23:00</p>
@@ -326,14 +322,15 @@
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27138.40441488!2d-60.60000973437499!3d-30.789999999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x944ac8f3b5c1c5f5%3A0x8be6d7626d2dfe0a!2sSan%20Justo%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1712177580000!5m2!1ses!2sar"
                   width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
+                  referrerpolicy="no-referrer-when-downgrade"></iframe>
               </div>
             </div>
           </div>
+
         </div>
       </div>
     </section>
+
   </main>
 
   <footer>
